[package]
name = "ue-cell-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bus = "2.4.1"
casual_logger = "0.6.5"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "color", "env", "help"] }
clap-serde = "0.5.1"
confy = { version = "0.6.1", default-features = false, features = ["yaml_conf"] }
ctrlc = "3.4.4"
derive = "1.0.0"
features = "0.10.0"
kanal = "0.1.0-pre8"
lazy_static = "1.4.0"
libc = "0.2.155"
nalgebra = "0.32.6"
nix = "0.28.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.198"
serde_json = "1.0.116"
serde_libconfig = "0.0.2"
serde_yaml = "0.9.34"
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["full", "sync"] }
